--- a/mingw-w64-libyaml-hg/PKGBUILD
+++ b/mingw-w64-libyaml-hg/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="YAML 1.1 library (mingw-w64)"
 arch=('any')
 url="http://pyyaml.org/wiki/LibYAML"
 license=("MIT")
-makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-pkg-config")
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-pkg-config" "mercurial")
 options=('staticlibs' 'strip')
 source=("${_realname}"::"hg+https://bitbucket.org/xi/libyaml"
         "0001-Proper-mingw-YAML_DECLARE-definition.patch"
