--- a/.drone.yml
+++ b/.drone.yml
@@ -11,8 +11,8 @@ notify:
     nick: MINGW-packages
     channel: tea-ci
     server:
-      host: chat.freenode.net
-      port: 6697
+      host: irc.freenode.net
+      port: 6667
 
 matrix:
   runtest:
