--- a/.drone.yml
+++ b/.drone.yml
@@ -16,6 +16,6 @@ notify:
 
 matrix:
   runtest:
-    - false
+    - true
 # Temprorary disable matrix build to workaround irc plugin bug on wine-ci.org, see https://github.com/drone/drone/issues/1459
 #    - true # allow failures
